force-app/main/default/objects/ucinn_ascendv2__Record_New_Button_Parent_Default__mdt/ucinn_ascendv2__Record_New_Button_Parent_Default__mdt.object-meta.xml
<CustomObject>
    <description>Used to populate the parent lookup field when creating a record using the Record New Button lightning component override.</description>
    <label>Record New Button Parent Default</label>
    <pluralLabel>Record New Button Parent Defaults</pluralLabel>
</CustomObject>