force-app/main/default/objects/ucinn_ascendv2__Record_New_Button_Parent_Default__mdt/fields/ucinn_ascendv2__Parent_Lookup_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Parent_Lookup_Field_API_Name__c</fullName>
    <label>Parent Lookup Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>