force-app/main/default/objects/ucinn_ascendv2__Record_New_Button_Parent_Default__mdt/fields/ucinn_ascendv2__Parent_Object__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Parent_Object__c</fullName>
    <label>Parent Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>