force-app/main/default/objects/ucinn_ascendv2__Record_New_Button_Parent_Default__mdt/fields/ucinn_ascendv2__Record_New_Button__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Record_New_Button__c</fullName>
    <label>Record New Button</label>
    <referenceTo>ucinn_ascendv2__Record_New_Button__mdt</referenceTo>
    <relationshipLabel>Record New Button Parent Defaults</relationshipLabel>
    <relationshipName>Record_New_Button_Parent_Defaults</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>